# Stacer

./: .gitignore  CMakeLists.txt  README.md  install-stacer.sh
stacer/: CMakeLists.txt  app.cpp  app.h  app.ui  main.cpp  stacer.pro  static.qrc
stacer-core/: CMakeLists.txt  stacer-core.pro
stacer-core/Types/: appentry.cpp  appentry.h  brokenapp.cpp  brokenapp.h
stacer-core/Types/Dbus/: sdbus_connection.cpp  sdbus_connection.h
stacer/Pages/AdvancedInfo/: advanced_info_page.cpp  advanced_info_page.h  advanced_info_page.ui
stacer/Pages/Dashboard/: circlebar.cpp  circlebar.h  circlebar.ui  dashboard_page.cpp
stacer/static/themes/default/style/: style.qss  values.ini
